--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,15 @@ nrf52832-pac = { version = "0.9.0", optional = true }
 nrf52840-pac = { version = "0.9.0", optional = true }
 log = { version = "0.4.8", optional = true }
 
+[dependencies.bbqueue]
+version = "0.4.4"
+default-features = false
+
 [features]
-51 = ["nrf51"]
-52810 = ["nrf52810-pac"]
-52832 = ["nrf52832-pac"]
-52840 = ["nrf52840-pac"]
+51 = ["nrf51", "bbqueue/thumbv6"]
+52810 = ["nrf52810-pac", "bbqueue/atomic"]
+52832 = ["nrf52832-pac", "bbqueue/atomic"]
+52840 = ["nrf52840-pac", "bbqueue/atomic"]
+
+# AJM HAX
+default = ["52832"]
