--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,12 @@
 [package]
 name = "esb"
 version = "0.0.1"
-authors = ["thalesfragoso <thales.fragosoz@gmail.com>"]
+authors = ["thalesfragoso <thales.fragosoz@gmail.com>", "James Munns <james.munns@ferrous-systems.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-generic-array = "0.13"
-zerocopy = "0.3.0"
-heapless = "0.5.4"
 nrf51 = { version = "0.9.0", optional = true }
 nrf52810-pac = { version = "0.9.0", optional = true }
 nrf52832-pac = { version = "0.9.0", optional = true }
@@ -25,6 +22,3 @@ default-features = false
 52810 = ["nrf52810-pac", "bbqueue/atomic"]
 52832 = ["nrf52832-pac", "bbqueue/atomic"]
 52840 = ["nrf52840-pac", "bbqueue/atomic"]
-
-# AJM HAX
-default = ["52832"]
