--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,25 @@
 [package]
 name = "esb"
 version = "0.0.1"
-authors = ["thalesfragoso <thales.fragosoz@gmail.com>", "James Munns <james.munns@ferrous-systems.com>"]
 edition = "2018"
+description = "Implementation of Nordic's Enhanced ShockBurst communication protocol"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = [
+    "Thales Fragoso <thales.fragosoz@gmail.com>",
+    "James Munns <james.munns@ferrous-systems.com>"
+]
+
+repository = "https://github.com/thalesfragoso/esb"
+documentation = "https://docs.rs/esb"
+readme = "README.md"
+
+categories = ["embedded", "no-std"]
+keywords = ["arm", "cortex-m", "nrf", "radio", "communication"]
+license = "MIT OR Apache-2.0"
+
+[package.metadata.docs.rs]
+features = ["52832"]
+default-target = "x86_64-unknown-linux-gnu"
 
 [dependencies]
 nrf51 = { version = "0.9.0", optional = true }
