--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ version = "0.4.5"
 default-features = false
 
 [features]
+fast-ru = []
 51 = ["nrf51", "bbqueue/thumbv6"]
 52810 = ["nrf52810-pac", "bbqueue/atomic"]
 52832 = ["nrf52832-pac", "bbqueue/atomic"]
