--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ default-features = false
 
 [features]
 fast-ru = []
-51 = ["nrf51", "bbqueue/thumbv6"]
+51 = ["nrf51-pac", "bbqueue/thumbv6"]
 52810 = ["nrf52810-pac", "bbqueue/atomic"]
 52832 = ["nrf52832-pac", "bbqueue/atomic"]
 52840 = ["nrf52840-pac", "bbqueue/atomic"]
