--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,11 @@ features = ["52832"]
 default-target = "x86_64-unknown-linux-gnu"
 
 [dependencies]
-nrf51 = { version = "0.9.0", optional = true }
-nrf52810-pac = { version = "0.9.0", optional = true }
-nrf52832-pac = { version = "0.9.0", optional = true }
-nrf52840-pac = { version = "0.9.0", optional = true }
+nrf51-pac = { version = "0.10.1", optional = true }
+nrf52810-pac = { version = "0.10.1", optional = true }
+nrf52832-pac = { version = "0.10.1", optional = true }
+nrf52833-pac = { version = "0.10.1", optional = true }
+nrf52840-pac = { version = "0.10.1", optional = true }
 log = { version = "0.4.8", optional = true }
 
 [dependencies.bbqueue]
@@ -34,7 +35,8 @@ default-features = false
 
 [features]
 fast-ru = []
-51 = ["nrf51", "bbqueue/thumbv6"]
+51 = ["nrf51-pac", "bbqueue/thumbv6"]
 52810 = ["nrf52810-pac", "bbqueue/atomic"]
 52832 = ["nrf52832-pac", "bbqueue/atomic"]
+52833 = ["nrf52833-pac", "bbqueue/atomic"]
 52840 = ["nrf52840-pac", "bbqueue/atomic"]
