--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,11 +39,8 @@ default-features = false
 
 [features]
 fast-ru = []
-51 = ["nrf51-pac"]
+51 = ["nrf51-pac", "bbqueue/thumbv6"]
 52810 = ["nrf52810-pac"]
 52832 = ["nrf52832-pac"]
 52833 = ["nrf52833-pac"]
 52840 = ["nrf52840-pac"]
-
-# TODO: Don't commit!
-default = ["52840"]
